move graalvm.dokerfile to dockerfile to test build on gitlab